manifests/backend/backend_deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: backend-deployment
    labels:
      app: backend-deployment
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: backend
    template:
      metadata:
        labels:
          app: backend
      spec:
        containers:
          - name: backend-container
            image: dev/hello-world-fastapi:1.0.0
            ports:
              - containerPort: 8000
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
            readinessProbe:
              httpGet:
                path: /
                port: 8000
              initialDelaySeconds: 10
              periodSeconds: 10
            livenessProbe:
              httpGet:
                path: /
                port: 8000
              initialDelaySeconds: 15
              periodSeconds: 10
        restartPolicy: Always
