manifests/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
